# python_tunning

./: .gitignore  .qmake.stash  CMakeLists.txt  Makefile  README.md  aarch64-toolchain.cmake  build_output.txt  encrypt_script.py  hwhandler.h  libpyTunning.so.1  libpyTunning.so.1.0.0  main.cpp  mainwindow.cpp  moc_hwhandler.cpp  moc_mainwindow.cpp  moc_predefs.h  qmake_output.txt  qrc_resources.cpp  resources.qrc  toolchain-armv7.cmake  tuning_mainwindow.enc  tuning_mainwindow.py  tunning.pro  tunning_a57.pro  ui_mainwindow.h
